# logiSerit

./: CMakeLists.txt  README.md  dav.cpp  engel.cpp  karar_eski.cpp  serit720.cpp  serit720sol.cpp  zedcam.cpp
